--- a/.github/workflows/web-ui-automation-workflow.yml
+++ b/.github/workflows/web-ui-automation-workflow.yml
@@ -41,7 +41,7 @@ jobs:
       
     # execute gradle command for running cucumber test
     - name : Execute Test
-      run : ./gradlew @login
+      run : ./gradlew CucumberTest
     
     
   
