--- a/.github/workflows/web-ui-automation-workflow.yml
+++ b/.github/workflows/web-ui-automation-workflow.yml
@@ -52,12 +52,12 @@ jobs:
        path : reports
        
    # deploy ke github pages
-    - name: GitHub Pages action
-      if : always()
-      uses: peaceiris/actions-gh-pages@v3.9.2
-      with :
-       PERSONAL_TOKEN : ${{ secrets.GITHUB_TOKEN}}
-       PUBLISH_DIR : reports
+   # - name: GitHub Pages action
+   #   if : always()
+   #   uses: peaceiris/actions-gh-pages@v3.9.2
+   #   with :
+   #    PERSONAL_TOKEN : ${{ secrets.GITHUB_TOKEN}}
+   #    PUBLISH_DIR : reports
 
        
 
