--- a/.github/workflows/web-ui-automation-workflow.yml
+++ b/.github/workflows/web-ui-automation-workflow.yml
@@ -1,4 +1,4 @@
-# This workflow uses actions that are not certified by Github.
+# This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed By
 # separate terms of service, privacy policy, And support
 # documentation.
