--- a/.github/workflows/web-ui-automation-workflow.yml
+++ b/.github/workflows/web-ui-automation-workflow.yml
@@ -1,5 +1,5 @@
 # This workflow uses actions that are not certified by Github.
-# They are provided by a third-party and are governed By
+# They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, And support
 # documentation.
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
